Change headline from 'Alabaster Space' to 'Space'

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         <!-- 05. GRID & LAYOUT -->
         <section id="layout">
             <div class="section-label">05. The Grid & Layout System</div>
-            <h2 class="headline-xl">Alabaster Space.</h2>
+            <h2 class="headline-xl">Space.</h2>
             <p class="body-lg">Empty space is an active design element. If a layout feels cramped, the perceived value of the product drops immediately.</p>
             <ul class="editorial-list" style="margin-top: var(--space-md);">
                 <li>
