Revise brand strategy paragraph for clarity
Updated brand description to emphasize craftsmanship and sustainability.

--- a/index.html
+++ b/index.html
@@ -338,12 +338,12 @@
         <section id="strategy">
             <div class="section-label">01. Brand Strategy & Positioning</div>
             <h2 class="headline-xl">We build architectural adventures.</h2>
-            <p class="body-lg">For design-conscious families who refuse to compromise on the aesthetic of their home, Bespoke Garden Play stands apart. We don't just build climbing frames; we build architectural adventures. Handcrafted luxury climbing frames with ply-lined interiors and cedar shingle roofs. Designed in the UK to outlast childhood.</p>
+            <p class="body-lg">Bespoke Garden Play is a premier UK design studio dedicated to elevating the art of outdoor play. Combining rigorous architectural principles with the finest sustainable materials , we handcraft luxury climbing frames and bespoke playhouses that sit beautifully within the natural landscape. Featuring our signature ply-lined interiors and cedar shingle roofs , each structure is not just a plaything, but a permanent, modular piece of your home —designed to grow alongside your children.</p>
 
             <div class="grid-2-col">
                 <div>
                     <h3 class="headline-md">The Archetype</h3>
-                    <p class="body-sm"><strong>The Creator meets The Magician.</strong> We provide the flawless, Creator-driven structure, so the child can provide the Magician-driven wonder. Every structure is a masterclass in craftsmanship, safety, and style.</p>
+                    <p class="body-sm"><strong>Dedicated to heritage craftsmanship, uncompromising quality, and sustainable materials. We build for longevity, creating beautifully designed heirlooms built to outlast childhood.</p>
                 </div>
                 <div>
                     <h3 class="headline-md">The Pillars</h3>
