Refine brand description for clarity and conciseness
Removed redundant phrasing and improved sentence structure for clarity.

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <section id="strategy">
             <div class="section-label">01. Brand Strategy & Positioning</div>
             <h2 class="headline-xl">We build architectural adventures.</h2>
-            <p class="body-lg">Bespoke Garden Play is a premier UK design studio dedicated to elevating the art of outdoor play. Combining rigorous architectural principles with the finest sustainable materials , we handcraft luxury climbing frames and bespoke playhouses that sit beautifully within the natural landscape. Featuring our signature ply-lined interiors and cedar shingle roofs , each structure is not just a plaything, but a permanent, modular piece of your home —designed to grow alongside your children.</p>
+            <p class="body-lg">Bespoke Garden Play is a premier UK design studio dedicated to elevating outdoor play. Combining rigorous architectural principles with the finest sustainable materials, we handcraft luxury climbing frames and bespoke playhouses that sit beautifully within the natural landscape. Featuring our signature ply-lined interiors and cedar shingle roofs, each structure is not just a plaything, but a permanent, modular piece of your home, designed to grow alongside your children.</p>
 
             <div class="grid-2-col">
                 <div>
